# local-planning-lead-scout

./: .env.example  .gitignore  IDEA.md  Makefile  OWNER_README.md  README.md  Start.bat  Start.command  VERIFY.md  pyproject.toml  web_config.json
data/: sample_input.txt  sample_owner_ai_insights.json  sample_planning_api_response.json
scripts/: owner_app.py  package_owner_app.py  run.py
tests/: test_smoke.py
